Removed extraneous import

--- a/IPython/Adversarial Patch Notebook.ipynb
+++ b/IPython/Adversarial Patch Notebook.ipynb
@@ -83,8 +83,7 @@
     "from tqdm import tqdm\n",
     "import zipfile\n",
     "import requests\n",
-    "import os\n",
-    "from PIL import Image"
+    "import os"
    ]
   },
   {
