Final results for Accuracy ResNet50

--- a/IPython/Adversarial Patch Notebook.ipynb
+++ b/IPython/Adversarial Patch Notebook.ipynb
@@ -987,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "582100ef",
    "metadata": {},
    "outputs": [
@@ -995,19 +995,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "555it [00:20, 26.59it/s]\n"
+      "3923it [02:12, 29.50it/s]"
      ]
     },
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[26]\u001b[39m\u001b[32m, line 31\u001b[39m\n\u001b[32m     28\u001b[39m gt_str = wn.synset_from_pos_and_offset(gt_class[:\u001b[32m1\u001b[39m], \u001b[38;5;28mint\u001b[39m(gt_class[\u001b[32m1\u001b[39m:])).lemma_names()[\u001b[32m0\u001b[39m]\n\u001b[32m     30\u001b[39m \u001b[38;5;66;03m#Raw with patch applied\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m31\u001b[39m patched_tensor = \u001b[43mrandom_overlay_patch\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimage_tensor\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpatch\u001b[49m\u001b[43m)\u001b[49m \n\u001b[32m     33\u001b[39m \u001b[38;5;66;03m#Raw preprocessed \u001b[39;00m\n\u001b[32m     34\u001b[39m preprocessed_image = preprocess(image_tensor.squeeze(\u001b[32m0\u001b[39m)).unsqueeze(\u001b[32m0\u001b[39m).to(device)\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[17]\u001b[39m\u001b[32m, line 40\u001b[39m, in \u001b[36mrandom_overlay_patch\u001b[39m\u001b[34m(image, patch, max_tilt)\u001b[39m\n\u001b[32m     37\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m rows.any() \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m cols.any():\n\u001b[32m     38\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m image\n\u001b[32m---> \u001b[39m\u001b[32m40\u001b[39m y_min, y_max = rows.nonzero()[\u001b[32m0\u001b[39m].item(), \u001b[43mrows\u001b[49m\u001b[43m.\u001b[49m\u001b[43mnonzero\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m[-\u001b[32m1\u001b[39m].item()\n\u001b[32m     41\u001b[39m x_min, x_max = cols.nonzero()[\u001b[32m0\u001b[39m].item(), cols.nonzero()[-\u001b[32m1\u001b[39m].item()\n\u001b[32m     43\u001b[39m patch_crop = transformed_patch[:, :, y_min:y_max+\u001b[32m1\u001b[39m, x_min:x_max+\u001b[32m1\u001b[39m]\n",
-      "\u001b[31mKeyboardInterrupt\u001b[39m: "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Top-1 Accuracy Before : 0.7568, Top-5 Accuracy Before: 0.9312\n",
+      "Top-1 Accuracy After : 0.2335, Top-5 Accuracy After: 0.6972\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -1017,7 +1020,7 @@
     "top1_correct_after = 0\n",
     "top5_correct_after = 0\n",
     "total = 0\n",
-    "verbose = True\n",
+    "verbose = False\n",
     "preprocess = transforms.Compose([\n",
     "    transforms.Resize(256),\n",
     "    transforms.CenterCrop(224),\n",
